--- a/config/database.yml
+++ b/config/database.yml
@@ -50,5 +50,7 @@ test:
 production:
   <<: *default
   database: furima_35236_production
-  username: furima_35236
-  password: <%= ENV['FURIMA_35236_DATABASE_PASSWORD'] %>
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/musql.sock
+  
